<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HelloAndroid</string>
    <string name="hello_world">User Name :</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password :</string>
    <string name="repeat_pass">Repeat Password :</string>
    <string name="accountName">User Name :</string>
    <string name="login">LOGIN</string>
    <string name="back">BACK</string>
    <string name="finish">FINISH</string>
    <string name="sign">REGIST</string>
    <string name="signup_title">REGISTER</string>
    <string name="next">NEXT</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="title">INPUT YOUR TITLE</string>
    <string name="content">CONTENT HERE</string>
    <string name="addpicture">长按添加一张图片吧！</string>
    <string name="details">DETAILS</string>
        <string name="picture">PICTURE</string>
</resources>
