<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#990000"
    android:theme="@android:style/Theme"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="2dip"
>

 <LinearLayout 
     android:id="@+id/briefFront"
android:orientation="horizontal"
android:layout_width="fill_parent"
android:layout_height="wrap_content"

>	
<Button android:text="@string/back"
 android:textSize="5pt"  
android:id="@+id/btnBriefBack" 
style="@style/ButtonText"
android:layout_height="wrap_content"
android:layout_width="fill_parent"
android:layout_weight="1"
android:layout_marginRight="45dp"
></Button>
　　   
        <Button
            android:id="@+id/btnBriefAdd"
            style="@style/ButtonText"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/add"
            android:textSize="5pt" 
            android:layout_weight="1"
            android:layout_marginLeft="45dp"
            android:layout_gravity="right">
</Button>
　　   </LinearLayout>
         <LinearLayout
android:id="@+id/briefHideLayout"
android:orientation="horizontal"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:visibility="gone"
>	
<Button android:text="@string/cancel"
 android:textSize="5pt"  
android:id="@+id/btnBriefRepeal" 
style="@style/ButtonText"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:layout_weight="1"
android:layout_marginRight="45dp"></Button>
　　   
        <Button
            android:id="@+id/btnBriefDelete"
            style="@style/ButtonText"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/delete"
            android:textSize="5pt" 
            android:layout_weight="1"
            android:layout_marginLeft="45dp">
</Button>
　　   </LinearLayout>
        
 <ListView
    android:id="@android:id/list"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="6dip" 
/>

 </LinearLayout>	