<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
    android:background="#990000"
    android:theme="@android:style/Theme"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="2dip"
>

<LinearLayout 
     android:id="@+id/briefFront"
android:orientation="horizontal"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:paddingBottom="2dip"
>	
<Button android:text="@string/back"
 android:textSize="5pt"  
android:id="@+id/btnAddBack" 
style="@style/ButtonText"
android:layout_height="wrap_content"
android:layout_width="fill_parent"
android:layout_weight="1"
android:layout_marginRight="45dp"
></Button>
　　   
        <Button
            android:id="@+id/btnAddSave"
            style="@style/ButtonText"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/add"
            android:textSize="5pt" 
            android:layout_weight="1"
            android:layout_marginLeft="45dp"
            android:layout_gravity="right">
</Button>
　　   </LinearLayout>
<LinearLayout 
android:orientation="horizontal"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:paddingBottom="2dip"
android:layout_marginRight="20dip"
android:layout_marginLeft="20dip"
>

<EditText 
    android:id="@+id/addTitle"
    android:singleLine="true"
    android:maxLength="20"
    android:inputType="text"
    android:textSize="20sp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dip" 
    android:gravity="center"
    android:hint="@string/title"
/>
</LinearLayout>

<LinearLayout 
    android:orientation="vertical"
    android:id="@+id/editLayout"
android:layout_width="fill_parent" android:layout_height="0dp"
android:layout_weight="1">

    <EditText 
android:id="@+id/contentAddView"
android:inputType="textMultiLine"
android:layout_width="fill_parent" 
android:layout_height="fill_parent"
android:singleLine="false"
android:gravity="top"
android:hint="@string/content"></EditText>
</LinearLayout>

<TextView 
    android:id="@+id/addDateText"
    android:gravity="right"
    android:textSize="20sp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" />
</LinearLayout>