<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:background="@drawable/bg"
android:theme="@android:style/Theme">

　　 <LinearLayout android:id="@+id/LinearLayout01"
android:layout_width="fill_parent"
android:layout_weight="0.9"
android:layout_height="fill_parent"
android:orientation="vertical">
　　  </LinearLayout>
　　 <LinearLayout android:layout_width="fill_parent"
android:id="@+id/LinearLayout02"
android:layout_weight="0.1"
android:orientation="vertical"
android:layout_height="fill_parent">
　　  <LinearLayout android:orientation="vertical" android:id="@+id/LinearLayout03" android:layout_width="wrap_content" android:layout_height="wrap_content"></LinearLayout>
　　<LinearLayout
android:layout_marginLeft="15dp"
android:layout_marginRight="15dp"
android:gravity="center"
android:layout_width="fill_parent"
android:id="@+id/LinearLayout_account"
android:orientation="horizontal"
android:layout_height="wrap_content"
>
   
　　      <TextView android:textSize="6pt" android:id="@+id/lblAccount"
android:text="@string/accountName"
android:layout_weight="0.7"
android:layout_width="fill_parent"
android:layout_height="wrap_content"></TextView>
　　     
　　      <EditText
android:layout_weight="0.3"
android:layout_width="fill_parent"
android:id="@+id/editBoxAccount"
android:layout_height="wrap_content"
android:inputType="text"
android:maxLength="12"
android:singleLine="true"></EditText>
     
　　    </LinearLayout>

　　<LinearLayout
android:layout_marginLeft="15dp"
android:layout_marginRight="15dp"
android:gravity="center"
android:layout_width="fill_parent"
android:orientation="horizontal"
android:layout_height="wrap_content">
   
　　      <TextView android:textSize="6pt" android:id="@+id/lblPassword"
android:text="@string/password"
android:layout_weight="0.7"
android:layout_width="fill_parent"
android:layout_height="wrap_content"></TextView>
     
　　      <EditText
android:layout_weight="0.3"
android:layout_width="fill_parent"
android:id="@+id/editBoxPassword"
android:inputType="textPassword"
android:layout_height="wrap_content"
android:maxLength="20"></EditText>
     
　　    </LinearLayout>
   
　　    <LinearLayout
android:layout_marginLeft="25dp"
android:layout_marginRight="25dp"
android:gravity="center"
android:layout_width="fill_parent"
android:orientation="horizontal"
android:layout_height="wrap_content"
android:layout_marginTop="20dp"
android:weightSum="1" >
   
　　   <Button android:text="@string/login"
 android:textSize="5pt"  
android:layout_width="0dp"
android:id="@+id/btnLogin" 
android:layout_weight="0.3"
style="@style/ButtonText"
android:layout_height="wrap_content"></Button>
　　   

　　   <Button android:text="@string/finish"
 android:textSize="5pt"  
android:layout_width="0dp"
android:layout_marginLeft="50dp"
android:id="@+id/btnFinish" 
android:layout_weight="0.3"
style="@style/ButtonText"
android:layout_height="wrap_content"></Button>
  
　　    </LinearLayout>
　　</LinearLayout>
</LinearLayout>

