<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
    android:background="#990000"
    android:theme="@android:style/Theme"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
>
<TextView 
    android:id="@+id/editDateText"
    android:gravity="center"
    android:text="date"
    android:textSize="20dp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5pt"/>
<LinearLayout android:orientation="horizontal"
android:layout_width="fill_parent" android:layout_height="wrap_content">
<Button android:text="@string/back"
 android:textSize="5pt"  
android:id="@+id/btnEditBack" 
style="@style/ButtonText"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:layout_weight="1"
android:layout_marginRight="15dp"></Button>
　　   
<Button
            android:id="@+id/btnEditAdd"
            style="@style/ButtonText"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/edit"
            android:textSize="5pt" 
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            >
</Button>
　　   
<Button
            android:id="@+id/btnEditSave"
            style="@style/ButtonText"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/save"
            android:textSize="5pt" 
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            >
</Button>
</LinearLayout>

<LinearLayout 
    android:orientation="vertical"
    android:id="@+id/editLayout"
android:layout_width="fill_parent" android:layout_height="fill_parent">

    <EditText 
android:id="@+id/contentEditView01"
android:inputType="textMultiLine"
android:layout_width="fill_parent" 
android:layout_height="fill_parent"
android:singleLine="false"
android:gravity="top"></EditText>
</LinearLayout>

</LinearLayout>